Fixed hero image placement on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -47,9 +47,7 @@
     max-width: 800px;
     width: 100%;
     height: auto;
-
     filter: drop-shadow(15px 10px 20px #01292F);
-    
 }
 
 .section {
@@ -61,4 +59,20 @@
     display: grid;
     grid-template-columns: 1rem 1fr;
     gap: 15px 10px;
+}
+
+@media screen and (max-width: 767px) {
+    .isotube {
+        position: relative;
+        width: 100%;
+        bottom: 0;
+    }
+
+    .isotube img {
+        position: absolute;
+        top: 10px;
+        right: -50px;
+        max-height: 110px;
+        width: auto;
+    }
 }
